<resources>
    <string name="app_name">Nthu Library Inspection System</string>
    <string name="app_version">version 1.5.8</string>
    <string name="button_inspection">設備維護檢視</string>
    <string name="button_history">設備檢視紀錄</string>
    <string name="button_statistics">狀態</string>
    <string name="button_setting">公告欄</string>
    <string name="button_sign_out">Sign Out</string>
    <string name="loading_data">Loading Data...</string>
    <string name="setting_old_password">舊密碼</string>
    <string name="setting_enter_old_password">請輸入舊密碼...</string>
    <string name="setting_new_password">新密碼</string>
    <string name="setting_enter_new_password">請輸入新密碼...</string>
    <string name="setting_new_password_2">新密碼確認</string>
    <string name="setting_enter_new_password_2">請輸入新密碼...</string>
    <string name="setting_submit">Submit</string>
    <string name="setting_cancel">Cancel</string>

    <string name="past1stDate_state_0">前     1     未紀錄</string>
    <string name="past1stDate_state_1">前     1     使用中</string>
    <string name="past1stDate_state_2">前     1     良好</string>
    <string name="past1stDate_state_3">前     1     問題排除</string>
    <string name="past1stDate_state_4">前     1     通知人員</string>
    <string name="past1stDate_state_5">前     1     其他</string>

    <string name="past2ndDate_state_0">前     2     未紀錄</string>
    <string name="past2ndDate_state_1">前     2     使用中</string>
    <string name="past2ndDate_state_2">前     2     良好</string>
    <string name="past2ndDate_state_3">前     2     問題排除</string>
    <string name="past2ndDate_state_4">前     2     通知人員</string>
    <string name="past2ndDate_state_5">前     2     其他</string>

    <string name="past3rdDate_state_0">前     3     未紀錄</string>
    <string name="past3rdDate_state_1">前     3     使用中</string>
    <string name="past3rdDate_state_2">前     3     良好</string>
    <string name="past3rdDate_state_3">前     3     問題排除</string>
    <string name="past3rdDate_state_4">前     3     通知人員</string>
    <string name="past3rdDate_state_5">前     3     其他</string>

    <string name="past4thDate_state_0">前     4     未紀錄</string>
    <string name="past4thDate_state_1">前     4     使用中</string>
    <string name="past4thDate_state_2">前     4     良好</string>
    <string name="past4thDate_state_3">前     4     問題排除</string>
    <string name="past4thDate_state_4">前     4     通知人員</string>
    <string name="past4thDate_state_5">前     4     其他</string>

    <string name="past5thDate_state_0">前     5     未紀錄</string>
    <string name="past5thDate_state_1">前     5     使用中</string>
    <string name="past5thDate_state_2">前     5     良好</string>
    <string name="past5thDate_state_3">前     5     問題排除</string>
    <string name="past5thDate_state_4">前     5     通知人員</string>
    <string name="past5thDate_state_5">前     5     其他</string>

    <string name="past6thDate_state_0">前     6     未紀錄</string>
    <string name="past6thDate_state_1">前     6     使用中</string>
    <string name="past6thDate_state_2">前     6     良好</string>
    <string name="past6thDate_state_3">前     6     問題排除</string>
    <string name="past6thDate_state_4">前     6     通知人員</string>
    <string name="past6thDate_state_5">前     6     其他</string>

    <string name="past7thDate_state_0">前     7     未紀錄</string>
    <string name="past7thDate_state_1">前     7     使用中</string>
    <string name="past7thDate_state_2">前     7     良好</string>
    <string name="past7thDate_state_3">前     7     問題排除</string>
    <string name="past7thDate_state_4">前     7     通知人員</string>
    <string name="past7thDate_state_5">前     7     其他</string>


    <string name="daily_problem_dialog_problem_solve">請輸入排除方法...</string>
    <string name="daily_problem_dialog_problem">請輸入問題...</string>
    <string name="history_all">所有檢視紀錄</string>
    <string name="history_state">各項檢視紀錄</string>
    <string name="history_search">搜尋紀錄</string>
    <string name="history_state_good">良好紀錄</string>
    <string name="history_state_solved">問題排除紀錄</string>
    <string name="history_state_problem">通知人員紀錄</string>
    <string name="history_state_using">使用中紀錄</string>
    <string name="history_state_noinfo">未紀錄</string>
    <string name="history_state_other">其他紀錄</string>

    <string-array name="condition">
        <item>良好</item>
        <item>問題排除</item>
        <item>通知人員</item>
        <item>其他</item>
        <item>使用中</item>
        <item>未紀錄</item>
    </string-array>

    <string-array name="unsolvable_problem_list">
        <item>其他</item>
        <item>Kiosk - Kiosk無法開機</item>
        <item>Kiosk - Kiosk主機當機無法正常使用</item>
        <item>Kiosk - Kiosk網路異常</item>
        <item>Kiosk - Kiosk螢幕畫面不正常</item>
        <item>讀卡機 - 讀卡機感應異常</item>
        <item>讀卡機 - 讀卡機壓克力座鬆開或鬆脫</item>
        <item>讀卡機 - 讀卡機壓克力座破損或缺件</item>
        <item>主機 - 電腦主機無法開機</item>
        <item>主機 - 電腦主機當機無法正常使用</item>
        <item>主機 - 電腦作業系統異常無法正常使用</item>
        <item>主機 - 電腦網路異常</item>
        <item>主機 - 電腦軟體功能無法正常使用</item>
        <item>螢幕 - 螢幕無法開機</item>
        <item>螢幕 - 螢幕沒有畫面</item>
        <item>螢幕 - 螢幕畫面有亮點或亮線</item>
        <item>螢幕 - 螢幕畫面不正常</item>
        <item>周邊(鍵盤) - 鍵盤無法正常使用</item>
        <item>周邊(鍵盤) - 鍵盤某按鍵異常</item>
        <item>周邊(鍵盤) - 鍵盤USB 連線異常</item>
        <item>周邊(滑鼠) - 滑鼠無法正常使用</item>
        <item>周邊(滑鼠) - 滑鼠某按鍵異常</item>
        <item>周邊(滑鼠) - 滑鼠USB 連線異常</item>
        <item>周邊(掃描機) - 掃描機無法開機</item>
        <item>周邊(掃描機) - 掃描機無法與主機連線</item>
        <item>周邊(掃描機) - 掃描異常無法正常使用</item>
        <item>周邊(擴視機) - 擴視機無法開機</item>
        <item>周邊(擴視機) - 擴視機無法與主機連線</item>
        <item>周邊(擴視機) - 擴視機設備異常無法正常使用</item>
        <item>投影機 - 投影機沒有開啟(無正常運作)</item>
        <item>音源孔 - 鏍絲鬆脫</item>
        <item>電燈座 - 桌燈故障</item>
        <item>椅子 - 椅子裂損或缺件(有危險成份)</item>
    </string-array>

    <string-array name="problem_list">
        <item>其他</item>
        <item>電腦主機電源線被拔掉</item>
        <item>電腦主機螢幕訊號線鬆動</item>
        <item>螢幕畫面解析度錯亂</item>
        <item>Kiosk主機當機</item>
        <item>電腦主機不正常</item>
    </string-array>

    <string-array name="solution_list">
        <item>其他</item>
        <item>電源線重新安裝</item>
        <item>螢幕訊號線重新安裝</item>
        <item>電腦主機重新調整解析度</item>
        <item>按紅色鈕重新開機</item>
        <item>重新開機</item>
    </string-array>

    <string name="title_activity_image_view">Image View</string>
    <string name="dummy_button">SAVE</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_gallery_">Gallery_Activity</string>
    <string name="dummy_button2">CLOSE</string>
</resources>
