<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nthu.softwarestudio.app.nthulibraryinspectionsystem.MainActivity"
    android:orientation="vertical"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/history_state_good"
            android:id="@+id/history_state_good_button"
            android:textSize="35sp"
            android:background="@drawable/rounded_button_menu"
            android:textColor="@color/davy_grey" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/history_state_solved"
            android:id="@+id/history_state_solved_button"
            android:textSize="35sp"
            android:background="@drawable/rounded_button_menu"
            android:textColor="@color/davy_grey" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/history_state_problem"
            android:id="@+id/history_state_problem_button"
            android:textSize="35sp"
            android:background="@drawable/rounded_button_menu"
            android:textColor="@color/davy_grey" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/history_state_using"
            android:id="@+id/history_state_using_button"
            android:textSize="35sp"
            android:background="@drawable/rounded_button_menu"
            android:textColor="@color/davy_grey" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/history_state_noinfo"
            android:id="@+id/history_state_noinfo_button"
            android:textSize="35sp"
            android:background="@drawable/rounded_button_menu"
            android:textColor="@color/davy_grey" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" >

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/history_state_other"
            android:id="@+id/history_state_other_button"
            android:textSize="35sp"
            android:background="@drawable/rounded_button_menu"
            android:textColor="@color/davy_grey" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/main_menu_background_logo">

        </FrameLayout>
    </LinearLayout>

</LinearLayout>
