<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="3dp"
    android:layout_marginLeft="3dp"
    android:background="@drawable/rounded_dialog_setting">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_form_mini_form">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="編號 : "
                android:id="@+id/daily_problem_solve_dialog_machine_number"
                android:textSize="20sp"
                android:textColor="@color/davy_grey" />
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:background="@drawable/rounded_form_mini_form">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="位置 : "
                android:id="@+id/daily_problem_solve_dialog_place"
                android:textSize="20sp"
                android:textColor="@color/davy_grey" />
        </FrameLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_button_menu" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="問題"
                    android:id="@+id/daily_problem_dialog_problem"
                    android:textSize="20sp"
                    android:textColor="@color/davy_grey" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp">

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/daily_problem_solve_dialog_spinner"
                    android:layout_gravity="left|center_vertical"
                    android:spinnerMode="dropdown" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/daily_problem_solve_dialog_problem_input"
                    android:hint="@string/daily_problem_dialog_problem"
                    android:textColorHint="@color/dim_foreground_disabled_material_dark"
                    android:background="@drawable/rounded_button_menu"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:inputType="text" />
            </FrameLayout>

        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_button_menu" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="排除方法"
                    android:id="@+id/textView2"
                    android:textSize="20sp"
                    android:textColor="@color/davy_grey" />
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/daily_problem_solve_dialog_problem_solve_input"
                    android:hint="@string/daily_problem_dialog_problem_solve"
                    android:textColorHint="@color/dim_foreground_disabled_material_dark"
                    android:background="@drawable/rounded_button_menu"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:inputType="text" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_submit"
                android:id="@+id/daily_problem_solve_dialog_submit_button"
                android:layout_gravity="center"
                android:background="@drawable/rounded_signin_button"
                android:textColor="@color/white"
                android:alpha="0.9"
                android:textSize="18sp" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_cancel"
                android:id="@+id/daily_problem_solve_dialog_cancel_button"
                android:layout_gravity="center"
                android:background="@drawable/rounded_signin_button"
                android:textColor="@color/white"
                android:alpha="0.9"
                android:textSize="18sp" />
        </FrameLayout>
    </LinearLayout>

</LinearLayout>